First day bug fixes
- Changes can be found on the Steam Workshop; there's too many

--- a/ktaneMetapuzzle-master/Manual/Metapuzzle.html
+++ b/ktaneMetapuzzle-master/Manual/Metapuzzle.html
@@ -19,13 +19,13 @@
         <div class="page page-bg-01">
             <div class="page-content">
                 <img src="img/Component/Metapuzzle.svg" class="diagram">
-                <h2 style="font-size: 44px; margin-top: -105px; text-decoration: none;">On the Subject of Metapuzzles</h2>
-                <h2 style="font-size: 30px; margin-top: -3px; text-decoration: none;">On the Subject of Metapuzzles</h2>
+                <h2 style="font-size: 44px; margin-top: -105px;">On the Subject of Metapuzzles</h2>
+                <h2 style="font-size: 30px; margin-top: -3px;">On the Subject of Metapuzzles</h2>
                 <h2 style="margin-top: 5px;">On the Subject of Metapuzzles</h2>
-                <h2 style="font-size: 16px; margin-top: 6px; text-decoration: none; color: #444444;">On the Subject of Metapuzzles</h2>
-                <h2 style="font-size: 8px; margin-top: 4px; text-decoration: none; color: #888888;">On the Subject of Metapuzzles</h2>
-                <h2 style="font-size: 4px; margin-top: 4px; text-decoration: none; color: #AAAAAA;">On the Subject of Metapuzzles</h2>
-                <h2 style="font-size: 2px; margin-top: 4px; text-decoration: none; color: #CCCCCC;">On the Subject of Metapuzzles</h2>
+                <h2 style="font-size: 16px; margin-top: 6px;color: #444444;">On the Subject of Metapuzzles</h2>
+                <h2 style="font-size: 8px; margin-top: 4px; color: #888888;">On the Subject of Metapuzzles</h2>
+                <h2 style="font-size: 4px; margin-top: 4px; color: #AAAAAA;">On the Subject of Metapuzzles</h2>
+                <h2 style="font-size: 2px; margin-top: 4px; color: #CCCCCC;">On the Subject of Metapuzzles</h2>
                 
                 <p>To solve the module, press the button at the top to enter submission mode and enter the answer to the metapuzzle.</p>
                 <p>Once you enter submission mode, you can exit it by pressing the button at the top again.</p>
